k8s/clusters/homelabrestore01/apps/sonarr/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: restore-sonarr
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.31
