k8s/clusters/homelabrestore01/apps/sonarr/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: restore-sonarr
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
